bundled_metadata/force-app/main/default/objects/EUSFA_Perfect_Store_KPIs__c/EUSFA_Perfect_Store_KPIs__c.object-meta.xml
<CustomObject>
    <label>Perfect Store KPIs</label>
    <nameField>
        <displayFormat>PSKPI-{0000}</displayFormat>
        <label>PSKPI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perfect Store KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>