bundled_metadata/force-app/main/default/objects/EUSFA_Perfect_Store_KPIs__c/fields/EUSFA_KPI_Id__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_KPI_Id__c</fullName>
    <label>KPI Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>