bundled_metadata/force-app/main/default/objects/EUSFA_Perfect_Store_KPIs__c/fields/EUSFA_PICOS_Points_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_PICOS_Points_Opportunities__c</fullName>
    <label>PICOS Points Opportunities</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>