bundled_metadata/force-app/main/default/objects/EUSFA_Perfect_Store_KPIs__c/fields/EUSFA_Store__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Perfect Store KPIs</relationshipLabel>
    <relationshipName>Perfect_Store_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>