bundled_metadata/force-app/main/default/objects/EUSFA_Perfect_Store_KPIs__c/fields/EUSFA_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Target_Value__c</fullName>
    <label>Target Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>