bundled_metadata/force-app/main/default/objects/EUSFA_Perfect_Store_KPIs__c/fields/EUSFA_Target_Variance__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Target_Variance__c</fullName>
    <formula>EUSFA_Target_Value__c -  EUSFA_Actual_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>